tests/type_check/error_span/accumulate_env_build_duplicates.err.expected
error: at 3:16: [TC-DuplicateDeclaration] Duplicate declaration of type 'S'
   |
 3 |         struct S { y: i64 }
   |                ^
error: at 5:12: [TC-DuplicateDeclaration] Duplicate declaration of function 'f'
   |
 5 |         fn f() { entry: return }
   |            ^
